# minimal-zenoh-shm-ping-pong

./: .gitignore  Cargo.toml  READMD.md
config/: ping.json5  pong.json5
